--- a/login_app/static/login_app_static/css/login.css
+++ b/login_app/static/login_app_static/css/login.css
@@ -16,6 +16,17 @@
 #header-inner * + *{
     margin-left: .8em;
 }
+.demo-account-button{
+    margin-bottom: 1em !important;
+    background-color: var(--clr-light);
+    border: none;
+    box-shadow: none;
+    color: var(--clr-dark);
+}
+    .demo-account-button:hover{
+        background-color: var(--clr-light);
+        color: var(--hover-text);
+    }
 #header a{
     color: var(--clr-dark);
     font-size: 14px;
